force-app/main/default/objects/LT_Pickup_Request__c/LT_Pickup_Request__c.object-meta.xml
<CustomObject>
    <description>Solicitacao de Coleta - LogiTrack Operations 360.</description>
    <label>Solicitacao de Coleta</label>
    <nameField>
        <displayFormat>COL-{000000}</displayFormat>
        <label>Codigo da Coleta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solicitacoes de Coleta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>