force-app/main/default/objects/LT_Pickup_Request__c/fields/LT_C2C_Dest_City__c.field-meta.xml
<CustomField>
    <fullName>LT_C2C_Dest_City__c</fullName>
    <description>Cidade de destino (Venda de Etiqueta).</description>
    <label>C2C - Cidade de Destino</label>
    <type>Text</type>
    <length>80</length>
</CustomField>