force-app/main/default/objects/LT_Pickup_Request__c/fields/LT_C2C_Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>LT_C2C_Recipient_Name__c</fullName>
    <description>Destinatario (Venda de Etiqueta).</description>
    <label>C2C - Destinatario</label>
    <type>Text</type>
    <length>120</length>
</CustomField>