force-app/main/default/objects/LT_Pickup_Request__c/fields/LT_Collected_Packages__c.field-meta.xml
<CustomField>
    <fullName>LT_Collected_Packages__c</fullName>
    <description>Quantidade efetivamente coletada.</description>
    <label>Pacotes Coletados</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>