force-app/main/default/objects/LT_Pickup_Request__c/fields/LT_Completed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>LT_Completed_DateTime__c</fullName>
    <description>Momento em que a coleta foi concluida.</description>
    <label>Data/Hora da Coleta</label>
    <type>DateTime</type>
</CustomField>