force-app/main/default/objects/LT_Pickup_Request__c/fields/LT_Estimated_Packages__c.field-meta.xml
<CustomField>
    <fullName>LT_Estimated_Packages__c</fullName>
    <description>Quantidade estimada de pacotes a coletar.</description>
    <label>Pacotes Estimados</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>