force-app/main/default/objects/LT_Pickup_Request__c/fields/LT_Fill_Rate__c.field-meta.xml
<CustomField>
    <fullName>LT_Fill_Rate__c</fullName>
    <description>Percentual coletado em relacao ao estimado.</description>
    <label>Aproveitamento</label>
    <formula>IF(OR(ISBLANK(LT_Estimated_Packages__c), LT_Estimated_Packages__c = 0), 0, LT_Collected_Packages__c / LT_Estimated_Packages__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>