force-app/main/default/objects/LT_Pickup_Request__c/fields/LT_First_Mile_Driver__c.field-meta.xml
<CustomField>
    <fullName>LT_First_Mile_Driver__c</fullName>
    <description>Motorista responsavel pela coleta.</description>
    <label>Motorista First Mile</label>
    <referenceTo>LT_Driver__c</referenceTo>
    <relationshipLabel>Coletas</relationshipLabel>
    <relationshipName>LT_Pickup_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>