force-app/main/default/objects/LT_Pickup_Request__c/fields/LT_Manifest__c.field-meta.xml
<CustomField>
    <fullName>LT_Manifest__c</fullName>
    <description>Romaneio em que esta coleta foi consolidada para pagamento.</description>
    <label>Romaneio</label>
    <referenceTo>LT_Manifest__c</referenceTo>
    <relationshipLabel>Coletas</relationshipLabel>
    <relationshipName>LT_Pickup_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>