force-app/main/default/objects/LT_Pickup_Request__c/fields/LT_Origin_Base__c.field-meta.xml
<CustomField>
    <fullName>LT_Origin_Base__c</fullName>
    <description>Base ou CD que despachou a coleta.</description>
    <label>Unidade de Origem</label>
    <referenceTo>LT_Logistics_Unit__c</referenceTo>
    <relationshipLabel>Coletas de Origem</relationshipLabel>
    <relationshipName>LT_Origin_Pickups</relationshipName>
    <type>Lookup</type>
</CustomField>