force-app/main/default/objects/LT_Pickup_Request__c/fields/LT_Pickup_Address__c.field-meta.xml
<CustomField>
    <fullName>LT_Pickup_Address__c</fullName>
    <description>Endereco onde a coleta sera realizada.</description>
    <label>Endereco de Coleta</label>
    <type>Text</type>
    <length>255</length>
</CustomField>