force-app/main/default/objects/LT_Pickup_Request__c/fields/LT_Pickup_City__c.field-meta.xml
<CustomField>
    <fullName>LT_Pickup_City__c</fullName>
    <description>Cidade da coleta.</description>
    <label>Cidade da Coleta</label>
    <type>Text</type>
    <length>80</length>
</CustomField>