force-app/main/default/objects/LT_Pickup_Request__c/fields/LT_Pickup_Point__c.field-meta.xml
<CustomField>
    <fullName>LT_Pickup_Point__c</fullName>
    <description>Ponto de coleta fisico (coletas DropOff).</description>
    <label>Ponto de Coleta (DropOff)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Coletas Recebidas</relationshipLabel>
    <relationshipName>LT_DropOff_Pickups</relationshipName>
    <type>Lookup</type>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Selecione uma conta do tipo Parceiro DropOff.</errorMessage>
        <filterItems>
            <field>Account.LT_Operating_Partner_Type__c</field>
            <operation>equals</operation>
            <value>Parceiro DropOff</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
</CustomField>