force-app/main/default/objects/LT_Pickup_Request__c/fields/LT_Pickup_State__c.field-meta.xml
<CustomField>
    <fullName>LT_Pickup_State__c</fullName>
    <description>Estado da coleta.</description>
    <label>UF da Coleta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brazilian_States</valueSetName>
    </valueSet>
</CustomField>