force-app/main/default/objects/LT_Pickup_Request__c/fields/LT_Pickup_Type__c.field-meta.xml
<CustomField>
    <fullName>LT_Pickup_Type__c</fullName>
    <description>Natureza da coleta First Mile.</description>
    <label>Tipo de Coleta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coleta no Seller</fullName>
                <default>true</default>
                <label>Coleta no Seller</label>
            </value>
            <value>
                <fullName>Coleta no DropOff</fullName>
            </value>
            <value>
                <fullName>C2C - Venda de Etiqueta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>