force-app/main/default/objects/LT_Pickup_Request__c/fields/LT_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>LT_Requested_By__c</fullName>
    <description>Quem pediu a coleta.</description>
    <label>Solicitante</label>
    <type>Text</type>
    <length>120</length>
</CustomField>