force-app/main/default/objects/LT_Pickup_Request__c/fields/LT_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Scheduled_Date__c</fullName>
    <description>Data agendada para a coleta.</description>
    <label>Data Agendada</label>
    <type>Date</type>
</CustomField>