force-app/main/default/objects/LT_Pickup_Request__c/fields/LT_Shipper__c.field-meta.xml
<CustomField>
    <fullName>LT_Shipper__c</fullName>
    <description>Embarcador que solicitou a coleta (coletas no Seller).</description>
    <label>Embarcador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Coletas</relationshipLabel>
    <relationshipName>LT_Pickup_Requests</relationshipName>
    <type>Lookup</type>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Selecione uma conta do tipo Embarcador.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>LT_Shipper</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
</CustomField>