force-app/main/default/objects/LT_Pickup_Request__c/fields/LT_Status__c.field-meta.xml
<CustomField>
    <fullName>LT_Status__c</fullName>
    <description>Situacao da solicitacao de coleta.</description>
    <label>Status da Coleta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solicitada</fullName>
                <default>true</default>
                <label>Solicitada</label>
            </value>
            <value>
                <fullName>Agendada</fullName>
            </value>
            <value>
                <fullName>Motorista a Caminho</fullName>
            </value>
            <value>
                <fullName>Coletada</fullName>
            </value>
            <value>
                <fullName>Nao Realizada</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>