force-app/main/default/objects/LT_Pickup_Request__c/fields/LT_Window_End__c.field-meta.xml
<CustomField>
    <fullName>LT_Window_End__c</fullName>
    <description>Fim da janela de coleta.</description>
    <label>Fim da Janela</label>
    <type>DateTime</type>
</CustomField>