force-app/main/default/objects/LT_Pickup_Request__c/fields/LT_Window_Start__c.field-meta.xml
<CustomField>
    <fullName>LT_Window_Start__c</fullName>
    <description>Inicio da janela de coleta.</description>
    <label>Inicio da Janela</label>
    <type>DateTime</type>
</CustomField>