force-app/main/default/objects/LT_Pickup_Request__c/validationRules/LT_Pickup_Collected_Requires_Data.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Pickup_Collected_Requires_Data</fullName>
    <active>true</active>
    <description>Coleta concluida exige motorista, quantidade e data/hora.</description>
    <errorConditionFormula>AND(ISPICKVAL(LT_Status__c, "Coletada"), OR(ISBLANK(LT_First_Mile_Driver__c), ISBLANK(LT_Collected_Packages__c), ISBLANK(LT_Completed_DateTime__c)))</errorConditionFormula>
    <errorMessage>Para concluir a coleta informe motorista, pacotes coletados e data/hora.</errorMessage>
</ValidationRule>