force-app/main/default/objects/LT_Pickup_Request__c/validationRules/LT_Pickup_Packages_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Pickup_Packages_Positive</fullName>
    <active>true</active>
    <description>Quantidades de pacotes nao podem ser negativas.</description>
    <errorConditionFormula>OR(LT_Estimated_Packages__c &lt; 0, LT_Collected_Packages__c &lt; 0)</errorConditionFormula>
    <errorMessage>As quantidades de pacotes nao podem ser negativas.</errorMessage>
</ValidationRule>