force-app/main/default/objects/LT_Pickup_Request__c/validationRules/LT_Pickup_Scheduled_Requires_Data.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Pickup_Scheduled_Requires_Data</fullName>
    <active>true</active>
    <description>Coleta Agendada exige motorista e data.</description>
    <errorConditionFormula>AND(ISPICKVAL(LT_Status__c, "Agendada"), OR(ISBLANK(LT_First_Mile_Driver__c), ISBLANK(LT_Scheduled_Date__c)))</errorConditionFormula>
    <errorDisplayField>LT_First_Mile_Driver__c</errorDisplayField>
    <errorMessage>Informe o Motorista First Mile e a Data Agendada.</errorMessage>
</ValidationRule>