force-app/main/default/objects/LT_Pickup_Request__c/validationRules/LT_Pickup_Seller_Requires_Shipper.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Pickup_Seller_Requires_Shipper</fullName>
    <active>true</active>
    <description>Coleta no Seller exige o embarcador.</description>
    <errorConditionFormula>AND(ISPICKVAL(LT_Pickup_Type__c, "Coleta no Seller"), ISBLANK(LT_Shipper__c))</errorConditionFormula>
    <errorDisplayField>LT_Shipper__c</errorDisplayField>
    <errorMessage>Informe o Embarcador para coletas no Seller.</errorMessage>
</ValidationRule>