force-app/main/default/objects/LT_Pickup_Request__c/validationRules/LT_Pickup_Window_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Pickup_Window_Order</fullName>
    <active>true</active>
    <description>O fim da janela nao pode ser antes do inicio.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(LT_Window_Start__c)), NOT(ISBLANK(LT_Window_End__c)), LT_Window_End__c &lt; LT_Window_Start__c)</errorConditionFormula>
    <errorDisplayField>LT_Window_End__c</errorDisplayField>
    <errorMessage>O Fim da Janela nao pode ser anterior ao Inicio.</errorMessage>
</ValidationRule>