force-app/main/default/objects/LT_Pickup_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LT_Pickup_Type__c</columns>
    <columns>LT_Status__c</columns>
    <columns>LT_Pickup_City__c</columns>
    <columns>LT_Pickup_State__c</columns>
    <columns>LT_Scheduled_Date__c</columns>
    <columns>LT_First_Mile_Driver__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas</label>
</ListView>